--- a/lab8_oilSpills.Rmd
+++ b/lab8_oilSpills.Rmd
@@ -32,3 +32,17 @@ ggplot(texas, aes(x = Year, y = Loss))+geom_col()+theme_classic()
 
 ```
 
+```{r}
+df_loc <- oil %>% 
+  filter(`Accident State` == "TX" & `Accident Year` == 2016) %>% 
+  select(Latitude, Longitude, `Net Loss (Barrels)`)
+
+colnames(df_loc) <- c("Lat","Long","Loss")
+
+oil_sf <- st_as_sf(df_loc, coords = c("Long","Lat"), crs = 4326)
+
+leaflet(oil_sf) %>% 
+  addTiles() %>% 
+  addMarkers()
+```
+
